Bug 1257363 - If deleting empty block, position caret at the start/end of text node (if any). r=masayuki a=kwierso

MozReview-Commit-ID: GXLTnJLFiop